# Qwen3ReRank8BRustDistroless

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  docker-compose.yml  quantize.py
.github/workflows/: ci.yml
src/: main.rs  tests_api.rs  tests_logic.rs
