[package]
name = "qwen-rerank"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray", "half"] }
ndarray = "0.15"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
half = "2.7.1"

[toolchain]
channel = "1.91.0"   # or "stable", but ensure >=1.85
components = ["clippy", "rustfmt"]
